Replace `Collections.unmodifiableList(new ArrayList(..))` with `List.copyOf()` (#30166)